--- a/VidCoder/Resources/CommonRes.resx
+++ b/VidCoder/Resources/CommonRes.resx
@@ -278,5 +278,6 @@ A full copy of the GNU General Public License has been included along with this 
   </data>
   <data name="First" xml:space="preserve">
     <value>First</value>
+    <comment>Choice to pick the first item in a list, like audio or subtitle tracks.</comment>
   </data>
 </root>
