--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -477,29 +477,23 @@
   <data name="ExportPresetFilePickerText" xml:space="preserve">
     <value>Export preset</value>
   </data>
-  <data name="SaveConfirmMessage" xml:space="preserve">
-    <value>Do you want to save changes to your current {0}?</value>
-    <comment>{0} is "picker" or "preset" (or the translated word)</comment>
+  <data name="SaveChangesPickerMessage" xml:space="preserve">
+    <value>Do you want to save changes to your current picker?</value>
   </data>
-  <data name="SaveConfirmTitle" xml:space="preserve">
-    <value>Save current {0}?</value>
-    <comment>{0} is "picker" or "preset" (or the translated word)</comment>
+  <data name="SaveChangesPickerTitle" xml:space="preserve">
+    <value>Save current picker?</value>
   </data>
   <data name="RevertConfirmMessage" xml:space="preserve">
-    <value>Are you sure you want to revert all unsaved changes to this {0}?</value>
-    <comment>{0} is "picker" or "preset" (or the translated word)</comment>
+    <value>Are you sure you want to revert all unsaved changes?</value>
   </data>
   <data name="RevertConfirmTitle" xml:space="preserve">
-    <value>Revert {0}</value>
-    <comment>{0} is "picker" or "preset" (or the translated word)</comment>
+    <value>Revert</value>
   </data>
   <data name="RemoveConfirmMessage" xml:space="preserve">
-    <value>Are you sure you want to remove this {0}?</value>
-    <comment>{0} is "picker" or "preset" (or the translated word)</comment>
+    <value>Are you sure you want to remove this?</value>
   </data>
   <data name="RemoveConfirmTitle" xml:space="preserve">
-    <value>Remove {0}</value>
-    <comment>{0} is "picker" or "preset" (or the translated word)</comment>
+    <value>Remove</value>
   </data>
   <data name="UserConfigCorrupted" xml:space="preserve">
     <value>Configuration was corrupted and could not be loaded. Some of your settings may have been reset.</value>
@@ -636,15 +630,8 @@
     <value>Picker {0}</value>
     <comment>The template for automatically named Pickers. For example Picker 1, Picker 2, etc.</comment>
   </data>
-  <data name="PickerWord" xml:space="preserve">
-    <value>picker</value>
-    <comment>Will be inserted into sentences that refer to a picker</comment>
-  </data>
-  <data name="PresetWord" xml:space="preserve">
-    <value>preset</value>
-    <comment>Will be inserted into sentences that refer to a preset</comment>
-  </data>
   <data name="SimilarTitlesToolTip" xml:space="preserve">
     <value>{0} other titles have a duration close to this one.</value>
+    <comment>{0} is the number of titles that have a similar duration.</comment>
   </data>
 </root>
