Updated HandBrake core. This removes the FDK AAC encoders, which can no longer be included due to GPL license compatibility concerns.
Updated translations.
Fixed rare crash with drag/drop.
Added fractional display for output PAR value.

--- a/VidCoder/Resources/Translations/CommonRes.ka.resx
+++ b/VidCoder/Resources/Translations/CommonRes.ka.resx
@@ -128,10 +128,10 @@
     <value>ტიტრის ვიდეოზე კოდირება. კოდირებული ტიტრით, მისი დეაქტივირება ვერ მოხერხდება.</value>
   </data>
   <data name="DefaultSubtitleToolTip" xml:space="preserve">
-    <value>ამ ტიტრის სტანდარტად არჩევა. ეს ტიტრი იქნება წარმოსახული ავტომატურად სანამ სხვა არ აირჩევა ხელით.</value>
+    <value>ამ ტიტრის სტანდარტად არჩევა. ეს ტიტრი იქნება წარმოსახული ავტომატურად სანამ სხვა არ აირჩევა პერსონალურად.</value>
   </data>
   <data name="ForcedSubtitleToolTip" xml:space="preserve">
-    <value>წყაროდან მხოლოდ იძულებითი ტიტრის ჩვენება. როგორც წესი ნიშნავს, პატარა ფრაგმენტებს, სადაც უცხო ენაზეა დიალოგი.</value>
+    <value>წყაროდან მხოლოდ დაძალებული ტიტრის ჩვენება. როგორც წესი ნიშნავს, პატარა ფრაგმენტებს, სადაც უცხო ენაზეა დიალოგი.</value>
   </data>
   <data name="OffsetSubtitleToolTip" xml:space="preserve">
     <value>ტიტრის მართვა, დროის წარმოსახვის დასაჩქარებლად ან შესაყოვნებლად.</value>
