--- a/VidCoder/Resources/Translations/PickerRes.ka.resx
+++ b/VidCoder/Resources/Translations/PickerRes.ka.resx
@@ -213,10 +213,10 @@
     <value>პირველი წყარო</value>
   </data>
   <data name="SingleSubtitleDefaultToolTip" xml:space="preserve">
-    <value>თუ ტიტრის სყარო სტანდარტადაა არჩეული, ვიდეოს რეპროდუქციისას ავტომატური წარმოისახება.</value>
+    <value>თუ ტიტრის სყარო სტანდარტადაა არჩეული, ვიდეოს რეპროდუქციისას ავტომატურად წარმოისახება.</value>
   </data>
   <data name="MultipleSubtitleDefaultToolTip" xml:space="preserve">
-    <value>თუ ტიტრის სყარო პირველადადაა არჩეული, ვიდეოს რეპროდუქციისას ავტომატური წარმოისახება.</value>
+    <value>თუ ტიტრის სყარო პირველადადაა არჩეული, ვიდეოს რეპროდუქციისას ავტომატურად წარმოისახება.</value>
   </data>
   <data name="FirstAsDefaultCheckBox" xml:space="preserve">
     <value>პირველის სტანდარტად არჩევა</value>
