Upgraded presets to be compatible with new filter format
We now back up database files when upgrading them and offer to restore
them if the current database has a version that's too high.
List of possible presets and tunes is now read dynamically from the
HandBrake core.

--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -634,4 +634,8 @@
     <value>{0} other titles have a duration close to this one.</value>
     <comment>{0} is the number of titles that have a similar duration.</comment>
   </data>
+  <data name="UseBackupDatabaseLine" xml:space="preserve">
+    <value>You have a backed up version {0} file. Would you like to use it?</value>
+    <comment>{0} is the version of the database file you have a backup for.</comment>
+  </data>
 </root>
