--- a/VidCoder/Resources/EncodingRes.resx
+++ b/VidCoder/Resources/EncodingRes.resx
@@ -1007,4 +1007,7 @@ Bicubic: This is an OpenCL hardware accelerated scaling algorithm.</value>
   <data name="Passthrough_truehd" xml:space="preserve">
     <value>TrueHD</value>
   </data>
+  <data name="InterlaceDetectionLabel" xml:space="preserve">
+    <value>Interlace Detection:</value>
+  </data>
 </root>
