--- a/VidCoder/Resources/Translations/EnumsRes.fr.resx
+++ b/VidCoder/Resources/Translations/EnumsRes.fr.resx
@@ -184,14 +184,18 @@
   <data name="Denoise_NLMeans" xml:space="preserve">
     <value>NL-Means</value>
   </data>
-  
+  <data name="EncodeCompleteActionType_CloseProgram" xml:space="preserve">
+    <value>Fermer VidCoder</value>
+  </data>
   <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
     <value>Ne rien faire</value>
   </data>
   <data name="EncodeCompleteActionType_EjectDisc" xml:space="preserve">
     <value>Éjecter {0} :</value>
   </data>
-  
+  <data name="EncodeCompleteActionType_Hibernate" xml:space="preserve">
+    <value>Mise en veille prolongée</value>
+  </data>
   <data name="EncodeCompleteActionType_LogOff" xml:space="preserve">
     <value>Fermez la session</value>
   </data>
@@ -204,9 +208,18 @@
   <data name="Off" xml:space="preserve">
     <value>Inactif</value>
   </data>
-  
-  
-  
+  <data name="TitleType_Bluray" xml:space="preserve">
+    <value>Blu-ray</value>
+    <comment>What to display when the source is a Blu-ray</comment>
+  </data>
+  <data name="TitleType_Dvd" xml:space="preserve">
+    <value>DVD</value>
+    <comment>What to display when the source is a DVD</comment>
+  </data>
+  <data name="TitleType_Stream" xml:space="preserve">
+    <value>Fichier</value>
+    <comment>What to display when the source is a file</comment>
+  </data>
   <data name="VideoRangeType_Chapters" xml:space="preserve">
     <value>Chapitres</value>
   </data>
