--- a/VidCoder/Resources/Translations/EnumsRes.zh.resx
+++ b/VidCoder/Resources/Translations/EnumsRes.zh.resx
@@ -154,24 +154,48 @@
   <data name="Deinterlace_Slower" xml:space="preserve">
     <value>较慢</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="DenoisePreset_Light" xml:space="preserve">
+    <value>轻</value>
+  </data>
+  <data name="DenoisePreset_Medium" xml:space="preserve">
+    <value>中</value>
+  </data>
+  <data name="DenoisePreset_Strong" xml:space="preserve">
+    <value>强</value>
+  </data>
+  <data name="DenoisePreset_Ultralight" xml:space="preserve">
+    <value>超轻</value>
+  </data>
+  <data name="DenoiseTune_Animation" xml:space="preserve">
+    <value>动画</value>
+  </data>
+  <data name="DenoiseTune_Film" xml:space="preserve">
+    <value>电影</value>
+  </data>
+  <data name="DenoiseTune_Grain" xml:space="preserve">
+    <value>胶片颗粒</value>
+  </data>
+  <data name="DenoiseTune_HighMotion" xml:space="preserve">
+    <value>高速运动</value>
+  </data>
+  <data name="Denoise_HQDN3D" xml:space="preserve">
+    <value>hqdn3d</value>
+  </data>
+  <data name="Denoise_NLMeans" xml:space="preserve">
+    <value>NL-Means算法</value>
+  </data>
+  <data name="EncodeCompleteActionType_CloseProgram" xml:space="preserve">
+    <value>关闭 VidCoder</value>
+  </data>
   <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
     <value>不执行任何操作</value>
   </data>
   <data name="EncodeCompleteActionType_EjectDisc" xml:space="preserve">
     <value>弹出 {0}：</value>
   </data>
-  
+  <data name="EncodeCompleteActionType_Hibernate" xml:space="preserve">
+    <value>休眠</value>
+  </data>
   <data name="EncodeCompleteActionType_LogOff" xml:space="preserve">
     <value>注销</value>
   </data>
@@ -184,9 +208,18 @@
   <data name="Off" xml:space="preserve">
     <value>关闭</value>
   </data>
-  
-  
-  
+  <data name="TitleType_Bluray" xml:space="preserve">
+    <value>Blu-ray</value>
+    <comment>What to display when the source is a Blu-ray</comment>
+  </data>
+  <data name="TitleType_Dvd" xml:space="preserve">
+    <value>DVD</value>
+    <comment>What to display when the source is a DVD</comment>
+  </data>
+  <data name="TitleType_Stream" xml:space="preserve">
+    <value>文件</value>
+    <comment>What to display when the source is a file</comment>
+  </data>
   <data name="VideoRangeType_Chapters" xml:space="preserve">
     <value>章节</value>
   </data>
