--- a/VidCoder/Resources/Translations/MainRes.hu.resx
+++ b/VidCoder/Resources/Translations/MainRes.hu.resx
@@ -477,12 +477,24 @@
   <data name="ExportPresetFilePickerText" xml:space="preserve">
     <value>Séma exportálása</value>
   </data>
-  
-  
-  
-  
-  
-  
+  <data name="SaveChangesPickerMessage" xml:space="preserve">
+    <value>Szeretnéd elmenteni a változásokat a jelenlegi sémába?</value>
+  </data>
+  <data name="SaveChangesPickerTitle" xml:space="preserve">
+    <value>Elmented a jelenlegi sémát?</value>
+  </data>
+  <data name="RevertConfirmMessage" xml:space="preserve">
+    <value>Biztosan szeretnéd elvetni a jelenlegi séma változásait?</value>
+  </data>
+  <data name="RevertConfirmTitle" xml:space="preserve">
+    <value>Visszavonás</value>
+  </data>
+  <data name="RemoveConfirmMessage" xml:space="preserve">
+    <value>Biztos vagy benne, hogy eltávolítod ezt az elemet?</value>
+  </data>
+  <data name="RemoveConfirmTitle" xml:space="preserve">
+    <value>Eltávolítás</value>
+  </data>
   <data name="UserConfigCorrupted" xml:space="preserve">
     <value>A beállítás meghibásodott és nem sikerült betölteni. Néhány beállítás valószínűleg visszaállításra került.</value>
   </data>
