--- a/VidCoder/Resources/Translations/MiscRes.hu.resx
+++ b/VidCoder/Resources/Translations/MiscRes.hu.resx
@@ -194,8 +194,13 @@
     <value>{0} Béta ({1})</value>
     <comment>First is version, second is architecture. For example: 1.4.2 Beta (x64)</comment>
   </data>
-  
-  
+  <data name="NameDialogTitle" xml:space="preserve">
+    <value>Név</value>
+    <comment>Title for dialog when  naming a preset or  picker</comment>
+  </data>
+  <data name="ChooseNamePreset" xml:space="preserve">
+    <value>Válassz egy nevet a sémának:</value>
+  </data>
   <data name="ApplyUpdateDialogTitle" xml:space="preserve">
     <value>Alkalmazod a frissítést?</value>
   </data>
@@ -247,5 +252,7 @@
   <data name="EncodeCompleteWarning_HibernateTitle" xml:space="preserve">
     <value>Hibernálás hamarosan</value>
   </data>
-  
+  <data name="ChooseNamePicker" xml:space="preserve">
+    <value>Válassz egy nevet a sémának:</value>
+  </data>
 </root>
