--- a/VidCoder/Resources/Translations/OptionsRes.fr.resx
+++ b/VidCoder/Resources/Translations/OptionsRes.fr.resx
@@ -225,7 +225,9 @@
   <data name="OptionsDialogTitle" xml:space="preserve">
     <value>Options</value>
   </data>
-  
+  <data name="ProcessTab" xml:space="preserve">
+    <value>Processus</value>
+  </data>
   <data name="AdvancedTab" xml:space="preserve">
     <value>Avancé</value>
   </data>
@@ -379,8 +381,17 @@
   <data name="CustomPreviewFolderCheckBox" xml:space="preserve">
     <value>Dossier personnalisé pour les prévisualisations :</value>
   </data>
-  
-  
-  
-  
+  <data name="ProcessOptionsLabel" xml:space="preserve">
+    <value>Options du processus</value>
+  </data>
+  <data name="CpuThrottlingLabel" xml:space="preserve">
+    <value>Charge du CPU :</value>
+    <comment>The label for the CPU throttling feature. This is where you limit the amount of CPU the encoder can use.</comment>
+  </data>
+  <data name="CpuThrottlingToolTip" xml:space="preserve">
+    <value>Utilisation CPU de limitation pour limiter le nombre de cœurs de processeur que VidCoder peut utiliser lors du codage.</value>
+  </data>
+  <data name="UseBuiltInPlayerForPreviewsCheckBox" xml:space="preserve">
+    <value>Lecteur intégré d’utilisation pour les prévisualisations</value>
+  </data>
 </root>
