--- a/VidCoder/Resources/Translations/PickerRes.fr.resx
+++ b/VidCoder/Resources/Translations/PickerRes.fr.resx
@@ -117,44 +117,133 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="AudioSelection" xml:space="preserve">
+    <value>Sélection audio</value>
+  </data>
+  <data name="BurnInCheckBox" xml:space="preserve">
+    <value>Graver dans</value>
+  </data>
+  <data name="DefaultCheckBox" xml:space="preserve">
+    <value>Par défaut</value>
+  </data>
+  <data name="ForeignAudioSearchRadioButton" xml:space="preserve">
+    <value>Recherche de piste audio étrangère</value>
+  </data>
+  <data name="IncludeAllTracksRadioButton" xml:space="preserve">
+    <value>Toutes les pistes</value>
+  </data>
+  <data name="LanguagesRadioButton" xml:space="preserve">
+    <value>Langue(s)</value>
+  </data>
+  <data name="OnlyIfDifferentFromAudioCheckBox" xml:space="preserve">
+    <value>Uniquement si une langue différente de l'audio</value>
+    <comment>Label for checkbox on subtitle picker. When checked, it will only include the subtitle if it's a different language from the audio track.</comment>
+  </data>
+  <data name="SubtitleSelection" xml:space="preserve">
+    <value>Sélection de sous-titres</value>
+  </data>
+  <data name="WindowTitle" xml:space="preserve">
+    <value>Sélecteur : {0}</value>
+  </data>
+  <data name="TitleSelection" xml:space="preserve">
+    <value>Sélection de titres</value>
+  </data>
+  <data name="PickerButtonFormat" xml:space="preserve">
+    <value>Sélecteur : {0}</value>
+    <comment>{0} is the name of the picker. This string shows up on the picker split button.</comment>
+  </data>
+  <data name="OutputLocation" xml:space="preserve">
+    <value>Emplacement de sortie</value>
+  </data>
+  <data name="OverrideDirectoryCheckBox" xml:space="preserve">
+    <value>Remplacer le répertoire :</value>
+  </data>
+  <data name="PickerHelpText" xml:space="preserve">
+    <value>Recherche automatiquement les titres, l'audio, les sous-titres et la destination</value>
+  </data>
+  <data name="AutoQueueOnScanCheckBox" xml:space="preserve">
+    <value>Automatiquement la file d’attente après la numérisation</value>
+  </data>
+  <data name="AutoEncodeOnScanCheckBox" xml:space="preserve">
+    <value>Commencer l'encodage après le scan</value>
+  </data>
+  <data name="UseGlobalSettingToolTip" xml:space="preserve">
+    <value>Utiliser les paramètres globaux</value>
+    <comment>Label for the "indeterminate" checkbox state that lets the user know that this will fall back to the global setting</comment>
+  </data>
+  <data name="PresetOverrideToolTip" xml:space="preserve">
+    <value>Cela remplace un réglage prédéfini sélectionné dans la fenêtre principale.</value>
+  </data>
+  <data name="EncodingSection" xml:space="preserve">
+    <value>Encodage</value>
+    <comment>The header for the Encoding section in the Picker window.</comment>
+  </data>
+  <data name="PostEncodingSection" xml:space="preserve">
+    <value>Après codage</value>
+    <comment>Header for the post-encoding section in the picker window.</comment>
+  </data>
+  <data name="SendFileToLabel" xml:space="preserve">
+    <value>Envoyer le fichier :</value>
+    <comment>Label for the option to run a program after encoding each file.</comment>
+  </data>
+  <data name="PostEncodeArgumentsLabel" xml:space="preserve">
+    <value>Arguments :</value>
+    <comment>The label for the arguments to pass to the post-encode executable.</comment>
+  </data>
+  <data name="PostEncodeArgumentsToolTip" xml:space="preserve">
+    <value>Arguments à passer au programme. Utilisez {file} pour le chemin de sortie de fichier.</value>
+    <comment>Tool tip for the post-encode arguments UI. Do not translate {file} .</comment>
+  </data>
+  <data name="PresetDisabledForPickerToolTip" xml:space="preserve">
+    <value>Sélecteur a spécifié le préréglage de codage.</value>
+  </data>
+  <data name="AddLanguageButton" xml:space="preserve">
+    <value>Ajouter une langue</value>
+  </data>
+  <data name="AllTracksForTheseLanguagesRadioButton" xml:space="preserve">
+    <value>Toutes les pistes de cette langue</value>
+  </data>
+  <data name="AllTracksForThisLanguageRadioButton" xml:space="preserve">
+    <value>Toutes les pistes de cette langue</value>
+  </data>
+  <data name="FirstTrackOfEachLanguageRadioButton" xml:space="preserve">
+    <value>Première piste de chaque langue</value>
+  </data>
+  <data name="FirstTrackRadioButton" xml:space="preserve">
+    <value>Première piste</value>
+  </data>
+  <data name="SingleSubtitleDefaultToolTip" xml:space="preserve">
+    <value>Marquer la piste de sous-titre par défaut, il apparaîtra automatiquement lors de la lecture la vidéo.</value>
+  </data>
+  <data name="MultipleSubtitleDefaultToolTip" xml:space="preserve">
+    <value>Marquer la piste de sous-titre par défaut, il apparaîtra automatiquement lors de la lecture la vidéo.</value>
+  </data>
+  <data name="FirstAsDefaultCheckBox" xml:space="preserve">
+    <value>Marquer tout d’abord comme valeur par défaut</value>
+    <comment>Label for checkbox to mark the first subtitle as default.</comment>
+  </data>
+  <data name="AllSubtitlesToolTip" xml:space="preserve">
+    <value>Inclure tous les sous-titres.</value>
+  </data>
+  <data name="SubtitleNoneToolTip" xml:space="preserve">
+    <value>Aucuns sous-titres inclus.</value>
+  </data>
+  <data name="AudioFirstToolTip" xml:space="preserve">
+    <value>Inclure uniquement la première piste audio.</value>
+  </data>
+  <data name="AudioAllToolTip" xml:space="preserve">
+    <value>Inclure toutes les pistes audio.</value>
+  </data>
+  <data name="SubtitleFirstToolTip" xml:space="preserve">
+    <value>Inclure uniquement le premier sous-titre.</value>
+  </data>
+  <data name="PresetLabel" xml:space="preserve">
+    <value>Utilisez le paramètre prédéfini :</value>
+  </data>
+  <data name="RemoveLanguageToolTip" xml:space="preserve">
+    <value>Supprimer cette langue.</value>
+  </data>
+  <data name="SortLanguagesLabel" xml:space="preserve">
+    <value>Trier les langue (s) haut de la page :</value>
+  </data>
 </root>
